--- a/view_results.ipynb
+++ b/view_results.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,22 +12,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
     "result_cot_general = pd.read_csv('experiment_results/gpt-turbo_multiarith_cot_general_8shot.csv', index_col=0)\n",
     "\n",
-    "result_arith_general = pd.read_csv('experiment_results/gpt-turbo_multiarith_arithcot_general_8shot.csv', index_col=0)\n",
-    "result_arith_multi = pd.read_csv('experiment_results/gpt-turbo_multiarith_arithcot_multiarith_8shot.csv', index_col=0)\n",
+    "result_arith_general_new = pd.read_csv('experiment_results/gpt-turbo_multiarith_arithcot_general_8shot_new.csv', index_col=0)\n",
     "\n",
-    "result_arith_general_old = pd.read_csv('experiment_results/old/gpt-turbo_multiarith_arithcot_general_8shot.csv', index_col=0)\n",
-    "result_arith_multi_old = pd.read_csv('experiment_results/old/gpt-turbo_multiarith_arithcot_multiarith_8shot.csv', index_col=0)"
+    "result_arith_general_old = pd.read_csv('experiment_results/gpt-turbo_multiarith_arithcot_general_8shot_old.csv', index_col=0)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -48,42 +46,15 @@
      "output_type": "stream",
      "text": [
       "0.975\n",
-      "0.8983333333333333\n",
-      "0.965\n",
-      "0.9116666666666666\n",
-      "0.965\n"
+      "0.9483333333333334\n",
+      "0.9483333333333334\n"
      ]
     }
    ],
    "source": [
     "print(acc(result_cot_general))\n",
-    "print(acc(result_arith_general))\n",
-    "print(acc(result_arith_multi))\n",
     "print(acc(result_arith_general_old))\n",
-    "print(acc(result_arith_multi_old))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 29,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "39\n",
-      "15\n",
-      "33\n",
-      "6\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(np.sum(result_arith_general['response_answer'].isnull()))\n",
-    "print(np.sum(result_arith_multi['response_answer'].isnull()))\n",
-    "print(np.sum(result_arith_general_old['response_answer'].isnull()))\n",
-    "print(np.sum(result_arith_multi_old['response_answer'].isnull()))"
+    "print(acc(result_arith_general_new))"
    ]
   },
   {
@@ -163,6 +134,141 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## cot vs. arithcot"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "result_arith_general_old.columns = [i + '_old' for i in result_arith_general_old.columns]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "result_arith_general_new.columns = [i + '_new' for i in result_arith_general_new.columns]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cot_arithcot = pd.concat([result_cot_general, result_arith_general_old, result_arith_general_new], axis = 1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cot_arithcot.drop(columns = ['question_old', 'answer_old', 'question_new', 'answer_new'], inplace = True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cot_arithcot['median_answer'] = -1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "<ipython-input-65-b9da98262b74>:7: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  cot_arithcot['median_answer'][i] = median_answer\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(0,600):\n",
+    "    a1 = cot_arithcot['response_answer'][i]\n",
+    "    a2 = cot_arithcot['response_answer_new'][i]\n",
+    "    a3 = cot_arithcot['response_answer_old'][i]\n",
+    "\n",
+    "    median_answer = np.nanmedian([a1,a2,a3])\n",
+    "    cot_arithcot['median_answer'][i] = median_answer"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.9816666666666667"
+      ]
+     },
+     "execution_count": 66,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.mean(cot_arithcot['answer'] == cot_arithcot['median_answer'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "changes = pd.DataFrame(cot_arithcot)\n",
+    "\n",
+    "for i in range(0,600):\n",
+    "    if(changes['answer'][i] != changes['response_answer'][i] or\n",
+    "       changes['answer'][i] != changes['response_answer_new'][i] or\n",
+    "       changes['answer'][i] != changes['response_answer_old'][i]):\n",
+    "        pass\n",
+    "    else:\n",
+    "        changes.drop(index = i, inplace=True)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "changes = changes[[\"question\", \"answer\", 'median_answer',\"response_answer\", \"response_answer_old\",\"response_answer_new\", \"mapping_old\", \"response\",\"response_answer_old\",\"response_old\",\"response_new\"]]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "changes.to_csv(\"temp.csv\")\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -186,7 +292,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.8.8"
   },
   "orig_nbformat": 4
  },
