First Pycot experiments

--- a/view_results.ipynb
+++ b/view_results.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,16 +40,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.98\n",
-      "0.9483333333333334\n",
-      "0.98\n",
+      "0.9816666666666667\n",
+      "0.96\n",
+      "0.9883333333333333\n",
       "0.97\n"
      ]
     }
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -116,14 +116,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\andyw\\AppData\\Local\\Temp\\ipykernel_33864\\769570786.py:7: SettingWithCopyWarning: \n",
+      "C:\\Users\\andyw\\AppData\\Local\\Temp\\ipykernel_33760\\769570786.py:7: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
@@ -143,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -152,7 +152,7 @@
        "0.9933333333333333"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -206,11 +206,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "result_arith_general_gpt3 = pd.read_csv('experiment_results/gpt3_multiarith_arithcot_general_8shot.csv', index_col=0)\n",
+    "#result_arith_general_gpt3 = pd.read_csv('experiment_results/gpt3_multiarith_arithcot_general_8shot.csv', index_col=0)\n",
     "\n",
     "result_varcot_general_gpt3 =pd.read_csv('experiment_results/gpt3_multiarith_varcot_general_8shot.csv', index_col=0)\n",
     "\n",
@@ -219,35 +219,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "result_arith_general_gpt3['answer'] = [float(i[1:-1]) for i in result_arith_general_gpt3['answer']]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.8466666666666667\n",
-      "0.8683333333333333\n",
-      "0.9083333333333333\n"
+      "0.9016666666666666\n",
+      "0.9166666666666666\n"
      ]
     }
    ],
    "source": [
     "print(acc(result_cot_general_gpt3))\n",
     "\n",
-    "print(acc(result_arith_general_gpt3))\n",
+    "#print(acc(result_arith_general_gpt3))\n",
     "\n",
     "print(acc(result_varcot_general_gpt3))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
