--- a/view_results.ipynb
+++ b/view_results.ipynb
@@ -245,6 +245,85 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Pycot"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def acc(results):\n",
+    "    return np.mean(results['num_answer'] == results['response_answer'])\n",
+    "\n",
+    "def missing(results):\n",
+    "    np.sum(results['response_answer'].isnull())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "result_cot_gsm8k = pd.read_csv('experiment_results/gpt-turbo_gsm8k_cot_general_8shot.csv', index_col=0)\n",
+    "result_pycot_gsm8k = pd.read_csv('experiment_results/gpt-turbo_gsm8k_pycot_general_8shot.csv', index_col=0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "result_pycot_gsm8k['response_answer'] = pd.to_numeric(result_pycot_gsm8k['response_answer'], errors = 'coerce')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "31"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.sum(result_pycot_gsm8k['response_answer'].isna())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.7877179681576952\n",
+      "0.733131159969674\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(acc(result_cot_gsm8k))\n",
+    "print(acc(result_pycot_gsm8k))\n"
+   ]
   }
  ],
  "metadata": {
@@ -263,7 +342,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.8.8"
   },
   "orig_nbformat": 4
  },
