--- a/view_results.ipynb
+++ b/view_results.ipynb
@@ -240,13 +240,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
@@ -269,46 +262,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
     "result_cot_gsm8k = pd.read_csv('experiment_results/gpt-turbo_gsm8k_cot_general_8shot.csv', index_col=0)\n",
-    "result_pycot_gsm8k = pd.read_csv('experiment_results/gpt-turbo_gsm8k_pycot_general_8shot.csv', index_col=0)"
+    "result_pycot_gsm8k = pd.read_csv('experiment_results/gpt-turbo_gsm8k_pycot_general_8shot.csv', index_col=0)\n",
+    "result_varcot_gsm8k = pd.read_csv('experiment_results/gpt-turbo_gsm8k_varcot_general_8shot(unprocessed).csv', index_col=0)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
-    "result_pycot_gsm8k['response_answer'] = pd.to_numeric(result_pycot_gsm8k['response_answer'], errors = 'coerce')"
+    "result_pycot_gsm8k['response_answer'] = pd.to_numeric(result_pycot_gsm8k['response_answer'], errors = 'coerce')\n",
+    "result_varcot_gsm8k['response_answer'] = pd.to_numeric(result_varcot_gsm8k['response_answer'], errors = 'coerce')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "31"
-      ]
-     },
-     "execution_count": 20,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "np.sum(result_pycot_gsm8k['response_answer'].isna())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -316,14 +291,90 @@
      "output_type": "stream",
      "text": [
       "0.7877179681576952\n",
-      "0.733131159969674\n"
+      "0.733131159969674\n",
+      "0.48673237300985595\n"
      ]
     }
    ],
    "source": [
     "print(acc(result_cot_gsm8k))\n",
-    "print(acc(result_pycot_gsm8k))\n"
+    "print(acc(result_pycot_gsm8k))\n",
+    "print(acc(result_varcot_gsm8k))\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "question             0\n",
+       "answer               0\n",
+       "response             0\n",
+       "mapping              0\n",
+       "response_answer    429\n",
+       "equations            0\n",
+       "num_answer           0\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.sum(result_varcot_gsm8k.isna())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1319"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(result_varcot_gsm8k)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "890"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "1319-429"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
