--- a/view_results.ipynb
+++ b/view_results.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,8 +28,16 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Main"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -51,10 +59,10 @@
      "output_type": "stream",
      "text": [
       "2\n",
-      "0.9683333333333334\n",
+      "0.9833333333333333\n",
       "0.9883333333333333\n",
       "4\n",
-      "0.9716666666666667\n",
+      "0.98\n",
       "0.99\n",
       "8\n",
       "0.9816666666666667\n",
@@ -68,6 +76,50 @@
     "    print(acc(cot_general[i]))\n",
     "    print(acc(varcot_general[i]))"
    ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Other"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cot = pd.read_csv('experiment_results/gpt3_cot_general_8shot.csv')\n",
+    "varcot = pd.read_csv('experiment_results/gpt3_varcot_general_8shot.csv')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.9016666666666666\n",
+      "0.9166666666666666\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(acc(cot))\n",
+    "print(acc(varcot))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
