--- a/view_results.ipynb
+++ b/view_results.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,30 +37,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "cot_general = {}\n",
     "varcot_general = {}\n",
     "\n",
-    "for i in [1,2,4,8]:\n",
+    "for i in [2,4,8]:\n",
     "    cot_general[i] = read_file('cot',i)\n",
     "    varcot_general[i] = read_file('varcot',i)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1\n",
-      "0.9783333333333334\n",
-      "0.9533333333333334\n",
       "2\n",
       "0.9833333333333333\n",
       "0.9883333333333333\n",
@@ -74,7 +71,7 @@
     }
    ],
    "source": [
-    "for i in [1,2,4,8]:\n",
+    "for i in [2,4,8]:\n",
     "    print(i)\n",
     "    print(acc(cot_general[i]))\n",
     "    print(acc(varcot_general[i]))"
@@ -90,25 +87,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "cot = pd.read_csv('experiment_results/gpt3_cot_general_8shot.csv')\n",
-    "varcot = pd.read_csv('experiment_results/gpt3_varcot_general_8shot.csv')\n"
+    "varcot = pd.read_csv('experiment_results/gpt3_varcot_general_8shot.csv')\n",
+    "cot = pd.read_csv('experiment_results/gpt3_cot_general_2shot.csv')\n",
+    "varcot = pd.read_csv('experiment_results/gpt3_varcot_general_2shot.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.9016666666666666\n",
-      "0.9166666666666666\n"
+      "0.7516666666666667\n",
+      "0.855\n"
      ]
     }
    ],
@@ -141,7 +140,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.9.13"
   },
   "orig_nbformat": 4
  },
